# cho-works

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-08-cho-works-implementation.md  2026-05-08-jira-llm-parrot-redesign.md
docs/superpowers/specs/: 2026-05-08-cho-works-design.md  2026-05-08-jira-llm-parrot-redesign.md
src/cho_works/: __init__.py  cli.py  config.py  db.py  llm_client.py  models.py  notifications.py  parsing.py  periods.py  report_context.py  report_schema.py  services.py  summarizers.py  web.py
src/cho_works/templates/: base.html  board.html  competency.html  entries.html  entry_edit.html  index.html  project_detail.html  projects.html  prompts.html  reminders.html  summary.html  summary_edit.html  work_item_edit.html
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_packaging.py  test_parsing.py  test_periods.py  test_projects_board.py  test_reminders_pet.py  test_reports.py  test_services.py  test_web.py
